force-app/main/default/objects/RTL_Upload_Campaign_Member__mdt/RTL_Upload_Campaign_Member__mdt.object-meta.xml
<CustomObject>
    <label>Upload Campaign Member</label>
    <pluralLabel>Upload Campaign Member</pluralLabel>
</CustomObject>