force-app/main/default/objects/RTL_Upload_Campaign_Member__mdt/fields/RTL_Line_Per_Split_File__c.field-meta.xml
<CustomField>
    <fullName>RTL_Line_Per_Split_File__c</fullName>
    <label>Line Per Split File</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>