force-app/main/default/objects/RTL_Upload_Campaign_Member__mdt/fields/RTL_Line_Save_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>RTL_Line_Save_Per_Batch__c</fullName>
    <label>Line Save Per Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>