force-app/main/default/objects/RTL_Upload_Campaign_Member__mdt/fields/RTL_Max_Upload_Line__c.field-meta.xml
<CustomField>
    <fullName>RTL_Max_Upload_Line__c</fullName>
    <label>Max Upload Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>