force-app/main/default/objects/RTL_Upload_Campaign_Member__mdt/fields/RTL_Temp_Data_Life_Time_Minute__c.field-meta.xml
<CustomField>
    <fullName>RTL_Temp_Data_Life_Time_Minute__c</fullName>
    <label>Temp Data Life Time Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>